fix: text align

--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -193,6 +193,7 @@
     text-align: center;
   }
   &__right {
+    text-align: center;
     max-width: 690px;
   }
   &__buttons {
